--- a/.github/workflows/image.yml
+++ b/.github/workflows/image.yml
@@ -27,6 +27,6 @@ jobs:
       with:
         context: .
         file: chatgpt_web/Dockerfile
-        platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+        platforms: linux/amd64
         push: true
         tags: wrhsd/chat-web:latest
