--- a/chatgpt_web/Dockerfile
+++ b/chatgpt_web/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:16.18.1-slim
 WORKDIR /web
 COPY . .
-RUN npm install --registry=https://registry.npm.taobao.org && npm run build
+RUN npm install && npm run build
 # run
 FROM nginx
 COPY --from=0 /web/nginx.conf /etc/nginx/conf.d/default.conf
